@@ -1,4 +1,4 @@
-$Id: History,v 1.35 1999-11-29 10:17:34 gcosmo Exp $
+$Id: History,v 1.36 2000-01-03 11:39:36 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+January 3, 2000 G.Cosmo (global-V01-00-00)
+- Syncronized changes with HEAD (mainly CVS headers).
+- Removed tphdict_test.cc and tvhdict_test.cc in STLInterface/test.
 
 November 29, 99 G.Cosmo (global-V00-01-14)
 - Removed g4std/string wrapper since not anymore needed.
